feat(account): implement account deletion
